--- a/bikeshed/static/bikeshed.css
+++ b/bikeshed/static/bikeshed.css
@@ -143,7 +143,8 @@ a {
   list-style: none;
   padding: 2px 0px;
   border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent; }
+  border-bottom: 1px solid transparent;
+  padding-right: 20px; }
   .bikeshed-list > ul > li:hover, .bikeshed-list > ul > li:hover > b {
     text-decoration: underline; }
   .bikeshed-list > ul > li.selected {
