--- a/bikeshed/static/css/list.scss
+++ b/bikeshed/static/css/list.scss
@@ -5,6 +5,7 @@
             padding: 2px 0px;
             border-top: 1px solid transparent;
             border-bottom: 1px solid transparent;
+            padding-right: $defaultpadding;
             
             &:hover, &:hover > b{
                 //background-color: $dropdown-selection-color;
