--- a/bikeshed/templates/base.html
+++ b/bikeshed/templates/base.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/static/bikeshed.css" />
 </head>
 <body>
-    <header>
-        <a href="/">promise less <b>|</b> do more</a>
-    </header>
-    <div id="page">
+    <div id="body">
     {% block body %}
     {% endblock %}
     </div>
