--- a/bikeshed/static/css/bikeshed.scss
+++ b/bikeshed/static/css/bikeshed.scss
@@ -100,6 +100,11 @@ a{
 }
 
 
+.ace-github .ace_variable {
+    color: $link-color;
+}
+
+
 .bikeshed-sidebar {
     position: absolute;
     right: 0px;
