--- a/bikeshed/static/css/config.scss
+++ b/bikeshed/static/css/config.scss
@@ -6,7 +6,7 @@ $link-color: #1099ee;
 
 $sidebar-width: 300px;
 
-$lineheight: 21px;
+$lineheight: 23px;
 
 $textcolor: #000;
 $soft-textcolor: #999;
@@ -15,7 +15,7 @@ $defaultpadding: 20px;
 
 
 @mixin font{
-    font-family: "Droid Sans Mono", monospace;
+    font-family: "Liberation Mono", monospace;
     line-height: $lineheight;
     font-size: 16px;
 }
