--- a/bikeshed/static/css/bikeshed.scss
+++ b/bikeshed/static/css/bikeshed.scss
@@ -29,14 +29,16 @@ textarea, input[type=text], input[type=password]{
     padding: 6px;
     outline: none;
     border: none;
-    border: 1px solid #eee;
+    border: 1px solid transparent;
+    background-color: $text-input-background-color;
     
     &:hover{
-        border-color: #ccc;
+        border-color: #000;
     }
     
     &:focus{
-        border-color: $link-color;
+        border-color: #000;
+        background-color: #fcfcfc;
     }
 }
 
@@ -109,9 +111,10 @@ a{
     position: absolute;
     right: 0px;
     top: 0px;
-    width: $sidebar-width;
+    width: $sidebar-width - $defaultpadding /* margin */ - 1px /* border */;
     height: 100%;
-    padding: 10px 10px;
+    padding: $defaultpadding 0px;
+    margin-left: $defaultpadding;
     border-left: 1px solid #eee;
 
     a{
@@ -196,13 +199,16 @@ h1{
 }
 
 .bikeshed-searchform {
+    position: relative;
+
     & > .fa-search{
         margin-left: -26px;
     }
 
     & > input[type=text]{
-        margin-left: -7px;
-        width: 600px;
+        padding-bottom: 2px;
+        box-sizing: border-box;
+        width: 100%;
     }
 }
 
